force-app/main/default/objects/Product2/fields/AfterSales_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AfterSales_Recommendation__c</fullName>
    <description>This Field created for Recommendation</description>
    <label>Recommendation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>