force-app/main/default/objects/Product2/fields/AfterSales_Supersession__c.field-meta.xml
<CustomField>
    <fullName>AfterSales_Supersession__c</fullName>
    <description>This field created for Suppression 
Created By: Shashikant Bagale</description>
    <label>Supersession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>