force-app/main/default/objects/Product2/fields/AMOS_Part_Mast_ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>AMOS_Part_Mast_ExternalKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>AMOS Part Mast ExternalKey</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>