force-app/main/default/objects/Product2/fields/AMOSCompanyKindCode__c.field-meta.xml
<CustomField>
    <fullName>AMOSCompanyKindCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <inlineHelpText>현대/기아 구분</inlineHelpText>
    <label>AMOSCompany Kind Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>