force-app/main/default/objects/Product2/fields/AMOSDealerPriceStk__c.field-meta.xml
<CustomField>
    <fullName>AMOSDealerPriceStk__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSDealerPriceStk</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>