force-app/main/default/objects/Product2/fields/AMOSDiscountRateDLY__c.field-meta.xml
<CustomField>
    <fullName>AMOSDiscountRateDLY__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSDiscountRateDLY</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>