force-app/main/default/objects/Product2/fields/AMOSDisposableClass__c.field-meta.xml
<CustomField>
    <fullName>AMOSDisposableClass__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSDisposableClass</label>
    <length>1</length>
    <type>Text</type>
</CustomField>