force-app/main/default/objects/Product2/fields/AMOSPartName__c.field-meta.xml
<CustomField>
    <fullName>AMOSPartName__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSPartName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>