force-app/main/default/objects/Product2/fields/AMOSPartNameNative__c.field-meta.xml
<CustomField>
    <fullName>AMOSPartNameNative__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSPartNameNative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>