force-app/main/default/objects/Product2/fields/AMOSProductCodeNew__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductCodeNew__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:
Changed by Riddhi Mittal for US-820</description>
    <label>AMOS Product Code (New)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>