force-app/main/default/objects/Product2/fields/AMOSProductType_c__c.field-meta.xml
<CustomField>
    <fullName>AMOSProductType_c__c</fullName>
    <description>US-820 requirement
created by Riddhi Mittal</description>
    <label>AMOSProductType__c</label>
    <length>1</length>
    <type>Text</type>
</CustomField>