force-app/main/default/objects/Product2/fields/AMOSQuantity__c.field-meta.xml
<CustomField>
    <fullName>AMOSQuantity__c</fullName>
    <description>Created by :- Riddhi Mittal (US-820)AMOS integration field creation requirement</description>
    <label>AMOSQuantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>