force-app/main/default/objects/Product2/fields/BlockFlag__c.field-meta.xml
<CustomField>
    <fullName>BlockFlag__c</fullName>
    <label>Block Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>