force-app/main/default/objects/Product2/fields/CapCd__c.field-meta.xml
<CustomField>
    <fullName>CapCd__c</fullName>
    <label>CAP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>