force-app/main/default/objects/Product2/fields/CapDesc__c.field-meta.xml
<CustomField>
    <fullName>CapDesc__c</fullName>
    <label>CAP Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>