force-app/main/default/objects/Product2/fields/CapId__c.field-meta.xml
<CustomField>
    <fullName>CapId__c</fullName>
    <label>CAP ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>