force-app/main/default/objects/Product2/fields/CarLine__c.field-meta.xml
<CustomField>
    <fullName>CarLine__c</fullName>
    <label>CarLine</label>
    <length>3</length>
    <type>Text</type>
</CustomField>