force-app/main/default/objects/Product2/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <description>Created By: Mayank Pant
Created Date: 27th Oct 2020
Purpose: This field will be used to determine the access of the product to users that belong to that country.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>