force-app/main/default/objects/Product2/fields/DAOSAppliedFullModelCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSAppliedFullModelCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <inlineHelpText>Applied Full Model</inlineHelpText>
    <label>DAOS Applied Full Model Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>