force-app/main/default/objects/Product2/fields/DAOSCarModelCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSCarModelCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>DAOS Car Model Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>