force-app/main/default/objects/Product2/fields/DAOSITCProductNew__c.field-meta.xml
<CustomField>
    <fullName>DAOSITCProductNew__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <inlineHelpText>신규 부품 ITC</inlineHelpText>
    <label>DAOS ITC Product</label>
    <length>1</length>
    <type>Text</type>
</CustomField>