force-app/main/default/objects/Product2/fields/DAOSLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DAOSLastModifiedDate__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>DAOS Last Modified Date</label>
    <type>DateTime</type>
</CustomField>