force-app/main/default/objects/Product2/fields/DAOSMinimumOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>DAOSMinimumOrderQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>DAOS Minimum Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>