force-app/main/default/objects/Product2/fields/DAOSSourceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSSourceTypeCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <inlineHelpText>조달 구분</inlineHelpText>
    <label>DAOS Source Type Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>