force-app/main/default/objects/Product2/fields/DAOSSUCCode__c.field-meta.xml
<CustomField>
    <fullName>DAOSSUCCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <inlineHelpText>현지 SUC 코드</inlineHelpText>
    <label>DAOS SUC Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>