force-app/main/default/objects/Product2/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <label>Dealer code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>