force-app/main/default/objects/Product2/fields/EngineType__c.field-meta.xml
<CustomField>
    <fullName>EngineType__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.0T</fullName>
            </value>
            <value>
                <fullName>2.2D</fullName>
            </value>
            <value>
                <fullName>3.3</fullName>
            </value>
            <value>
                <fullName>3.3T</fullName>
            </value>
            <value>
                <fullName>3.8</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>