force-app/main/default/objects/Product2/fields/ERPFuelTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ERPFuelTypeCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>ERP Fuel Type Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>