force-app/main/default/objects/Product2/fields/ERPModelCode__c.field-meta.xml
<CustomField>
    <fullName>ERPModelCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>ERP Model Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>