force-app/main/default/objects/Product2/fields/ExteriorColour__c.field-meta.xml
<CustomField>
    <fullName>ExteriorColour__c</fullName>
    <label>Exterior Colour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>