force-app/main/default/objects/Product2/fields/ExteriorColourCode__c.field-meta.xml
<CustomField>
    <fullName>ExteriorColourCode__c</fullName>
    <label>Exterior Colour Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>