force-app/main/default/objects/Product2/fields/FSC__c.field-meta.xml
<CustomField>
    <fullName>FSC__c</fullName>
    <label>FSC</label>
    <length>17</length>
    <type>Text</type>
</CustomField>