force-app/main/default/objects/Product2/fields/FSCSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>FSCSalesPrice__c</fullName>
    <label>FSC Sales Price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>