force-app/main/default/objects/Product2/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Oct 2020
User Story:
Purpose:</description>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>