force-app/main/default/objects/Product2/fields/InteriorColour__c.field-meta.xml
<CustomField>
    <fullName>InteriorColour__c</fullName>
    <label>Interior Colour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>