force-app/main/default/objects/Product2/fields/InteriorColourCode__c.field-meta.xml
<CustomField>
    <fullName>InteriorColourCode__c</fullName>
    <label>Interior Colour Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>