force-app/main/default/objects/Product2/fields/InteriorTrim__c.field-meta.xml
<CustomField>
    <fullName>InteriorTrim__c</fullName>
    <label>Interior Trim</label>
    <length>3</length>
    <type>Text</type>
</CustomField>