force-app/main/default/objects/Product2/fields/IsRequiredPart__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredPart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Is Required Part</label>
    <type>Checkbox</type>
</CustomField>