force-app/main/default/objects/Product2/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>