force-app/main/default/objects/Product2/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 28th Jan 2021
Purpose: This field will be used to identify the masterfile type i.e whether it is part or a labor.</description>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_Item_Type</valueSetName>
    </valueSet>
</CustomField>