force-app/main/default/objects/Product2/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 23rd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 
Purpose:</description>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locale</valueSetName>
    </valueSet>
</CustomField>