force-app/main/default/objects/Product2/fields/LTS_Labor_Mast_ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>LTS_Labor_Mast_ExternalKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LTS Labor Mast ExternalKey</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>