force-app/main/default/objects/Product2/fields/LTSCarModelCode__c.field-meta.xml
<CustomField>
    <fullName>LTSCarModelCode__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSCarModelCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>