force-app/main/default/objects/Product2/fields/LTSCompanyKindCode__c.field-meta.xml
<CustomField>
    <fullName>LTSCompanyKindCode__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSCompanyKindCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>