force-app/main/default/objects/Product2/fields/LTSEnglishWorkName__c.field-meta.xml
<CustomField>
    <fullName>LTSEnglishWorkName__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSEnglishWorkName</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>