force-app/main/default/objects/Product2/fields/LTSFinalModifier__c.field-meta.xml
<CustomField>
    <fullName>LTSFinalModifier__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSFinalModifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>