force-app/main/default/objects/Product2/fields/LTSFirstRegistrant__c.field-meta.xml
<CustomField>
    <fullName>LTSFirstRegistrant__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSFirstRegistrant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>