force-app/main/default/objects/Product2/fields/LTSFirstRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>LTSFirstRegistrationDate__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSFirstRegistrationDate</label>
    <length>14</length>
    <type>Text</type>
</CustomField>