force-app/main/default/objects/Product2/fields/LTSIntegration__c.field-meta.xml
<CustomField>
    <fullName>LTSIntegration__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSIntegration</label>
    <length>1</length>
    <type>Text</type>
</CustomField>