force-app/main/default/objects/Product2/fields/LTSMainGroup__c.field-meta.xml
<CustomField>
    <fullName>LTSMainGroup__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSMainGroup</label>
    <length>5</length>
    <type>Text</type>
</CustomField>