force-app/main/default/objects/Product2/fields/LTSMessageID__c.field-meta.xml
<CustomField>
    <fullName>LTSMessageID__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSMessageID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>