force-app/main/default/objects/Product2/fields/LTSRelatedWorkDetails__c.field-meta.xml
<CustomField>
    <fullName>LTSRelatedWorkDetails__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSRelatedWorkDetails</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>