force-app/main/default/objects/Product2/fields/LTSRepairCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>LTSRepairCategoryCode__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSRepairCategoryCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>