force-app/main/default/objects/Product2/fields/LTSSearchEndDate__c.field-meta.xml
<CustomField>
    <fullName>LTSSearchEndDate__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSSearchEndDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>