force-app/main/default/objects/Product2/fields/LTSSPNCCode__c.field-meta.xml
<CustomField>
    <fullName>LTSSPNCCode__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSSPNCCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>