force-app/main/default/objects/Product2/fields/LTSSubGroup__c.field-meta.xml
<CustomField>
    <fullName>LTSSubGroup__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSSubGroup</label>
    <length>12</length>
    <type>Text</type>
</CustomField>