force-app/main/default/objects/Product2/fields/LTSTaskCodeEndTwoDigits__c.field-meta.xml
<CustomField>
    <fullName>LTSTaskCodeEndTwoDigits__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSTaskCodeEndTwoDigits</label>
    <length>2</length>
    <type>Text</type>
</CustomField>