force-app/main/default/objects/Product2/fields/LTSWhetherToDelete__c.field-meta.xml
<CustomField>
    <fullName>LTSWhetherToDelete__c</fullName>
    <description>US- 1326  LTS integration interface
Created by:- Riddhi MIttal</description>
    <label>LTSWhetherToDelete</label>
    <length>1</length>
    <type>Text</type>
</CustomField>