force-app/main/default/objects/Product2/fields/Masterfile_Name_Dup__c.field-meta.xml
<CustomField>
    <fullName>Masterfile_Name_Dup__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Masterfile Name Dup</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>