force-app/main/default/objects/Product2/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>MC</label>
    <length>12</length>
    <type>Text</type>
</CustomField>