force-app/main/default/objects/Product2/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 29/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model</valueSetName>
    </valueSet>
</CustomField>