force-app/main/default/objects/Product2/fields/ModelType__c.field-meta.xml
<CustomField>
    <fullName>ModelType__c</fullName>
    <label>Model Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>